# hive

./: .env.example  .gitignore  README.md  eslint.config.js  mise.toml  next.config.js  next.config.ts  package-lock.json  package.json  prettier.config.js  pyproject.toml  requirements.txt  sample.json  tailwind.config.ts  test.html
api/: README.md  app.py  pyproject.toml
hivemind/: .env.example  README.md  app.py  pyproject.toml
public/: dailyReportData.json  dailyreport.css
src/analytics/: PostHogPageView.tsx  PostHogProvider.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/login/: actions.ts  page.tsx
src/app/(auth)/signup/: actions.ts  page.tsx
src/app/(protected)/: layout.tsx
src/app/auth/: layout.tsx
src/app/chat/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/document/: layout.tsx
src/app/editor/: page.tsx  styles.module.css  template.tsx
src/app/error/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: Button.tsx  ChatButton.tsx  Features.tsx  Footer.tsx  Header.tsx  Impact.tsx  Testimonials.tsx
src/components/editor/: Sidebar.tsx  Toolbar.tsx
src/components/magicui/: marquee.tsx
src/components/providers/: theme-provider.tsx
src/components/ui/: border-beam.tsx  dropdown-menu.tsx  marquee.tsx  meteors.tsx  navigation-menu.tsx  number-ticker.tsx  sheet.tsx
src/context/: EditorContext.tsx  PdfContext.tsx  PosthogProvider.tsx
src/data/: dailyReportData.ts
src/hooks/: usePdfExport.ts
src/types/: dailyReport.ts  html2pdf.d.ts
src/utils/supabase/: middleware.ts
(+36 files in other folders)
